[package]
name = "bidirectional_enum"
version = "0.1.0"
edition = "2021"
description = "Automatically generates conversions between an enum type and any other type"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
