[package]
name = "bidirectional_enum"
version = "0.2.0"
edition = "2021"
description = "Automatically generates conversions between an enum type and any other type"
authors = ["Giftzwerg02"]
license = "MIT"
homepage = "https://github.com/Giftzwerg02/bidirectional_enum"
readme = "README.md"
keywords = ["enum", "macros", "decl_macro"]
categories = ["rust-patterns", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]